Get the external urls of tweet

--- a/.env-sample
+++ b/.env-sample
@@ -9,3 +9,9 @@ MAILER_ENABLE_STARTTLS_AUTO=<Detects if STARTTLS is enabled in your SMTP server 
 
 # mailer_sender used by `devise`
 MAILER_SENDER=yusuke@ybj.jp
+
+# twitter api keys
+TWITTER_CONSUMER_KEY=YOUR_CONSUMER_KEY
+TWITTER_CONSUMER_SECRET=YOUR_CONSUMER_SECRET
+TWITTER_ACCESS_TOKEN=YOUR_ACCESS_TOKEN
+TWITTER_ACCESS_SECRET=YOUR_ACCESS_SECRET
