Run active job on sidekiq

--- a/.env-sample
+++ b/.env-sample
@@ -15,3 +15,8 @@ TWITTER_CONSUMER_KEY=YOUR_CONSUMER_KEY
 TWITTER_CONSUMER_SECRET=YOUR_CONSUMER_SECRET
 TWITTER_ACCESS_TOKEN=YOUR_ACCESS_TOKEN
 TWITTER_ACCESS_SECRET=YOUR_ACCESS_SECRET
+
+# redis host and port
+REDIS_HOST=REDIS_HOSTNAME
+REDIS_PORT=6379
+SIDEKIQ_NAMESPACE=sidekiq
