# Customize rails_admin - Support rails_admin history (User) - Support manually lock user

--- a/.env-sample
+++ b/.env-sample
@@ -20,3 +20,6 @@ TWITTER_ACCESS_SECRET=YOUR_ACCESS_SECRET
 REDIS_HOST=REDIS_HOSTNAME
 REDIS_PORT=6379
 SIDEKIQ_NAMESPACE=sidekiq
+
+# cancan admin email
+ADMIN_USER_EMAIL=<mail@address>
