Add to link to sidekiq at rails_admin

--- a/.env-sample
+++ b/.env-sample
@@ -21,5 +21,11 @@ REDIS_HOST=REDIS_HOSTNAME
 REDIS_PORT=6379
 SIDEKIQ_NAMESPACE=sidekiq
 
-# cancan admin email
+# super_admin email
 ADMIN_USER_EMAIL=<mail@address>
+
+# sidekiq web url
+SIDEKIQ_WEB_URL=/super_admin/sidekiq
+
+# admin url
+ADMIN_URL=/admin
