Apply to design

--- a/.env-sample
+++ b/.env-sample
@@ -29,3 +29,6 @@ SIDEKIQ_WEB_URL=/super_admin/sidekiq
 
 # admin url
 ADMIN_URL=/admin
+
+# mongodb port for docker-compose
+LOCAL_MONGODB_PORT=27017
