--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     container_name: newsdict_mongodb
     image: mongo
     restart: always
+    ports:
+      - ${LOCAL_MONGODB_PORT}:27017
     networks:
       - app-tier
   web:
