Running webpacke-dev-server on docker-compose

--- a/.env-sample
+++ b/.env-sample
@@ -32,3 +32,6 @@ ADMIN_URL=/admin
 
 # mongodb port for docker-compose
 LOCAL_MONGODB_PORT=27017
+
+# webpack-dev-server
+WEBPACK_DEV_SERVER_PUBLIC=<domain>:3036
