--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "newsdict",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2"
+    "@rails/webpacker": "^4.0.2",
+    "dotenv": "^8.0.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
