Add document server's container

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials.yml.enc
 
 /public/packs
 /public/packs-test
@@ -35,3 +36,8 @@ yarn-debug.log*
 
 # dot-env
 /.env
+
+# documents
+/.yardoc
+/.asciidoc
+/doc
