--- a/.env-sample
+++ b/.env-sample
@@ -8,7 +8,7 @@ MAILER_AUTHENTICATION=<If your mail server requires authentication, you need to 
 MAILER_ENABLE_STARTTLS_AUTO=<Detects if STARTTLS is enabled in your SMTP server and starts to use it. Defaults to true.>
 
 # mailer_sender used by `devise`
-MAILER_SENDER=yusuke@ybj.jp
+MAILER_SENDER=<admin@mailaddress>
 
 # twitter api keys
 TWITTER_CONSUMER_KEY=YOUR_CONSUMER_KEY
