--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     working_dir: /var/www/newsdict
     command: >
       bash -c "yarn install --check-files
+      && . /etc/profile.d/rvm.sh
       && bundle install --path .bundle --no-deployment --with development test
-      && (/usr/sbin/nginx -c /etc/nginx/nginx.conf &)
       && (bin/webpack-dev-server &)
       && bundle exec rails s -b 0.0.0.0 -p 3000"
     ports:
@@ -43,11 +43,16 @@ services:
     image: newsdictio_web
     container_name: newsdict_worker
     working_dir: /var/www/newsdict
-    command: "bundle exec sidekiq -q default"
+    command: >
+      bash -c "yarn install --check-files
+      && . /etc/profile.d/rvm.sh
+      && bundle exec sidekiq -q default"
     volumes:
     - ./:/var/www/newsdict
     networks:
       - app-tier
+    depends_on:
+      - redis
   document:
     tty: true
     stdin_open: true
@@ -56,6 +61,8 @@ services:
     working_dir: /var/www/newsdict
     command: >
       bash -c "(/usr/sbin/nginx -c /etc/nginx/nginx.conf &)
+      && yarn install --check-files
+      && . /etc/profile.d/rvm.sh
       && bin/generate_all_documents
       && bundle exec guard"
     volumes:
