Added a function to limit the number of admissions

--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,6 @@
+# Maximum number of members
+MAX_MEMBER_COUNT=1
+
 # action mailer settings
 MAILER_SMTP=<Allows you to use a remote mail server. Just change it from its default "localhost" setting.>
 MAILER_PORT=587
