--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,10 @@
 /public/packs
 /public/packs-test
 /node_modules
+/yarn.lock
 /yarn-error.log
-yarn-debug.log*
-.yarn-integrity
+/yarn-debug.log*
+/.yarn-integrity
 
 # rubymine
 /.idea
