--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "newsdict",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2",
+    "@rails/webpacker": "^4.0.7",
+    "core-js": "3.1.4",
     "dotenv": "^8.0.0",
     "vue": "^2.6.10",
-    "vue-loader": "^15.7.0",
+    "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.7.2"
   }
 }
