--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       && . /etc/profile.d/rvm.sh
       && bundle install --path .bundle --no-deployment --with development test
       && (bin/webpack-dev-server &)
-      && bundle exec rails s"
+      && bundle exec rails s -b 0.0.0.0 -p 3000"
     ports:
       - 3000:3000
       - 3036:3036
