--- a/.env-sample
+++ b/.env-sample
@@ -24,6 +24,9 @@ REDIS_HOST=REDIS_HOSTNAME
 REDIS_PORT=6379
 SIDEKIQ_NAMESPACE=sidekiq
 
+# mongodb host
+MONGODB_HOST=<mongodb host>
+
 # super_admin email
 ADMIN_USER_EMAIL=<mail@address>
 
