--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       bash -c "yarn install --check-files
       && . /etc/profile.d/rvm.sh
       && bundle install --path .bundle --no-deployment --with development test
+      && bundle exec rails db:seed
       && (bin/webpack-dev-server &)
       && bundle exec rails s -b 0.0.0.0 -p 3000"
     ports:
