Enable serving static files from the `/public` folder

--- a/.env-sample
+++ b/.env-sample
@@ -41,3 +41,6 @@ LOCAL_MONGODB_PORT=27017
 
 # webpack-dev-server
 WEBPACK_DEV_SERVER_PUBLIC=<domain>:3036
+
+# Enable serving static files from the `/public` folder 
+RAILS_SERVE_STATIC_FILES=1
