--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,8 +5,7 @@ development:
       database: newsdict_development
       hosts:
         - mongo:27017
-      options:
-  options:
+  options: &options
     raise_not_found_error: false
 test:
   clients:
@@ -14,33 +13,22 @@ test:
       database: newsdict_test
       hosts:
         - mongo:27017
-    options:
-      read:
-        mode: :primary
-      max_pool_size: 1
-
+  options:
+    <<: *options
 document:
   clients:
     default:
       database: newsdict_document
       hosts:
         - mongo:27017
-      options:
-        read:
-          mode: :primary
-        max_pool_size: 1
-
+  options:
+    <<: *options
 production:
   clients:
     default:
       database: newsdict_production
       hosts:
         - <%= ENV['MONGODB_HOST'] %>
-      options:
-        read:
-          mode: :primary
-        max_pool_size: 1
   options:
-    raise_not_found_error: false
-
+    <<: *options
 
