--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,10 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
+          name: set .env
+          command: |
+            copy .env-sample 
+      - run:
           name: rails test -v
           command: |
             set -x
