--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             set -x
             docker-compose --project-name newsdict build web
             docker-compose up -d
-            docker-compose exec web /bin/bash -c ". /etc/profile.d/rvm.sh && cd /var/www/docker && bundle install && bin/rails test -v"
+            docker-compose exec web /bin/bash -c "bash src/provisioning/startup/test/test.sh -v"
       - run:
           name: docker-compose down
           command: docker-compose down
