--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
+    "bulma": "^0.7.5",
     "core-js": "3.1.4",
     "dotenv": "^8.0.0",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
