--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -11,7 +11,8 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: []
+  resolved_paths:
+    - app/javascript
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
@@ -34,6 +35,7 @@ default: &default
     - .woff2
 
   extensions:
+    - .erb
     - .mjs
     - .js
     - .sass
@@ -51,9 +53,6 @@ default: &default
 development:
   <<: *default
   compile: true
-
-  # Verifies that versions and hashed value of the package contents in the project's package.json
-  check_yarn_integrity: true
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
