--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "newsdict",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.7",
-    "bulma": "^0.7.5",
-    "core-js": "3.1.4",
-    "dotenv": "^8.0.0",
+    "@rails/webpacker": "^4.2.0",
+    "bulma": "^0.8.0",
+    "core-js": "^3.4.0",
+    "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "vue": "^2.6.10",
-    "vue-loader": "^15.7.1",
+    "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.9.0"
   }
 }
