--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@rails/webpacker": "^4.2.2",
+    "axios": "^0.19.1",
     "bulma": "^0.8.0",
     "core-js": "^3.6.3",
     "dotenv": "^8.2.0",
