--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,7 @@ jobs:
             set -x
             docker-compose build web
             docker-compose up -d
-            sleep 10
-            docker-compose exec web /bin/bash -c ". src/provisioning/startup/bootstrap.sh web && bin/rails test -v"
+            docker/exec bin/rails test -v
       - run:
           name: docker-compose down
           command: docker-compose down
