--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -5,9 +5,9 @@
     class: TwitterAccountsJob
   update_mecab_dic_job:
     enabled: true
-    cron: '0 0 * * *'
+    cron: '0 0 * * * *'
     class: UpdateMecabDicsJob
   sitemap_job:
     enabled: true
-    cron: '0 0 0 * *'
+    cron: '0 0 0 * * *'
     class: SitemapsJob
