Refactoring .env files

--- a/.env-sample
+++ b/.env-sample
@@ -1,49 +1,36 @@
 # Default Locale
 default_locale=ja
 
-# Maximum number of members
+# Maximum number of admin's members
 MAX_MEMBER_COUNT=1
 
-# action mailer settings
-MAILER_SMTP=<Allows you to use a remote mail server. Just change it from its default "localhost" setting.>
-MAILER_PORT=587
-MAILER_DOMAIN=<If you need to specify a HELO domain, you can do it here.>
-MAILER_USER_NAME=<If your mail server requires authentication, set the username in this setting.>
-MAILER_PASSWORD=<If your mail server requires authentication, set the password in this setting.>
-MAILER_AUTHENTICATION=<If your mail server requires authentication, you need to specify the authentication type here. This is a symbol and one of :plain (will send the password in the clear), :login (will send password Base64 encoded) or :cram_md5 (combines a Challenge/Response mechanism to exchange information and a cryptographic Message Digest 5 algorithm to hash important information)>
-MAILER_ENABLE_STARTTLS_AUTO=<Detects if STARTTLS is enabled in your SMTP server and starts to use it. Defaults to true.>
-
-# mailer_sender used by `devise`
-MAILER_SENDER=<admin@mailaddress>
-
-# twitter api keys
-TWITTER_CONSUMER_KEY=YOUR_CONSUMER_KEY
-TWITTER_CONSUMER_SECRET=YOUR_CONSUMER_SECRET
-TWITTER_ACCESS_TOKEN=YOUR_ACCESS_TOKEN
-TWITTER_ACCESS_SECRET=YOUR_ACCESS_SECRET
+# super_admin email
+ADMIN_USER_EMAIL=
 
 # redis host and port
-REDIS_HOST=REDIS_HOSTNAME
-REDIS_PORT=6379
+REDIS_HOST=
 SIDEKIQ_NAMESPACE=sidekiq
 
 # mongodb host
-MONGODB_HOST=<mongodb host>
-
-# super_admin email
-ADMIN_USER_EMAIL=<mail@address>
-
-# sidekiq web url
-SIDEKIQ_WEB_URL=/sidekiq
-
-# admin url
-ADMIN_URL=/admin
-
-# mongodb port for docker-compose
-LOCAL_MONGODB_PORT=27017
+MONGODB_HOST=
 
 # webpack-dev-server
-WEBPACK_DEV_SERVER_PUBLIC=<domain>:3036
+WEBPACK_DEV_SERVER_PUBLIC=
 
-# Enable serving static files from the `/public` folder 
-RAILS_SERVE_STATIC_FILES=1
+# action mailer settings
+MAILER_SMTP=
+MAILER_PORT=
+MAILER_DOMAIN=
+MAILER_USER_NAME=
+MAILER_PASSWORD=
+MAILER_AUTHENTICATION=login
+MAILER_ENABLE_STARTTLS_AUTO=true
+
+# mailer_sender used by `devise`
+MAILER_SENDER=
+
+# twitter api keys
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
