--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Docker Compose
       run: |
-        set -x
+        set -xe
         curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
         chmod +x ~/docker-compose
         sudo mv ~/docker-compose /usr/local/bin/docker-compose
@@ -27,7 +27,7 @@ jobs:
         docker-compose down
     - name: build & rails test -v
       run: |
-        set -x
+        set -xe
         docker/start -d
         docker/rails test -v
     - name: DockerCompose down
