--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,13 +15,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Docker Compose
       run: |
-        set -xe
-        curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+        set -x
+        curl -L https://github.com/docker/compose/releases/download/1.25.4/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
         chmod +x ~/docker-compose
         sudo mv ~/docker-compose /usr/local/bin/docker-compose
     - name: Set up .env
       run: |
-        cp .env-sample .env
+        cp .env-test .env
     - name: DockerCompose down
       run: |
         docker-compose down
