--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "npm-check-updates": "npm-check-updates -u"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@rails/webpacker": "^4.2.2",
     "axios": "^0.19.1",
-    "bulma": "^0.8.0",
+    "bulma": "^0.8.2",
     "core-js": "^3.6.3",
     "dotenv": "^8.2.0",
-    "npm-check-updates": "^4.0.1",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.8.3",
+    "npm-check-updates": "^4.1.2",
+    "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
+    "vue2": "^1.0.0",
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
