--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,7 @@ public/shared/sitemap*.xml.gz
 !/shared/.keep
 
 # lock files of docker-compose
-/installed.document.lock
-/installed.worker.lock
+/installed.*.lock
 
 # App themes
 /app/themes/*
