Added method `urls`

--- a/.env-example
+++ b/.env-example
@@ -17,6 +17,10 @@ MONGODB_HOST=dummy.com
 # webpack-dev-server
 WEBPACK_DEV_SERVER_PUBLIC=1.2.3.4:3036
 
+# Logging to STDOUT
+# If you do not want to output the log, please comment out
+RAILS_LOG_TO_STDOUT=1
+
 # action mailer settings
 MAILER_SMTP=dummy.com
 MAILER_PORT=587
