--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,6 @@ services:
       - app-tier
     depends_on:
       - web
-      - redis
   asciidoctor:
     tty: true
     stdin_open: true
@@ -57,6 +56,8 @@ services:
       - ./:/var/www/docker
     networks:
       - app-tier
+    depends_on:
+      - web
   guard:
     tty: true
     stdin_open: true
@@ -67,6 +68,8 @@ services:
       - ./:/var/www/docker
     networks:
       - app-tier
+    depends_on:
+      - web
   browser-sync:
     tty: true
     stdin_open: true
@@ -80,3 +83,5 @@ services:
       - 3001:3001
     networks:
       - app-tier
+    depends_on:
+      - web
