--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -22,7 +22,7 @@ jobs:
     - name: build
       run: |
         set -xe
-        docker/start --build
+        docker/start --build -d
     - name: rails test -v
       run: |
         set -xe
