--- a/.github/workflows/unittest_for_master.yml
+++ b/.github/workflows/unittest_for_master.yml
@@ -30,7 +30,7 @@ jobs:
       if: ${{ success() }}
       env:
         SLACK_CHANNEL: actions
-        SLACK_COLOR: '#cdcdd1'
+        SLACK_COLOR: '#0000f2'
         SLACK_ICON: https://github.com/rtCamp.png?size=48
         SLACK_MESSAGE: 'Passed unittest :100:'
         SLACK_TITLE: Passed UnitTest
