--- a/.github/workflows/unittest_for_master.yml
+++ b/.github/workflows/unittest_for_master.yml
@@ -27,7 +27,7 @@ jobs:
         docker/rails test -v
     - name: Passed Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
-      if: ${{ success() }}
+      if: ${{ secrets.SLACK_WEBHOOK && success() }}
       env:
         SLACK_CHANNEL: actions
         SLACK_COLOR: '#0000f2'
@@ -38,7 +38,7 @@ jobs:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
     - name: NG Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
-      if: ${{ failure() }}
+      if: ${{ secrets.SLACK_WEBHOOK && failure() }}
       env:
         SLACK_CHANNEL: actions
         SLACK_COLOR: '#ed0707'
