--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -29,7 +29,7 @@ jobs:
         docker/rails test -v
     - name: Passed Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
-      if: ${{ secrets.SLACK_WEBHOOK }} && ${{ success() }}
+      if: ${{ secrets.SLACK_WEBHOOK != null && success() }}
       env:
         SLACK_CHANNEL: actions
         SLACK_COLOR: '#0000f2'
@@ -40,7 +40,7 @@ jobs:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
     - name: NG Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
-      if: ${{ secrets.SLACK_WEBHOOK }} && ${{ failure() }}
+      if: ${{ secrets.SLACK_WEBHOOK != null && failure() }}
       env:
         SLACK_CHANNEL: actions
         SLACK_COLOR: '#ed0707'
