--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -3,6 +3,10 @@
     enabled: false
     cron: '0 */3 * * *'
     class: Crowling::WebUrlsJob
+  web_sections_job:
+    enabled: false
+    cron: '0 */3 * * *'
+    class: Crowling::WebSectionsJob
   twitter_account_job:
     enabled: false
     cron: '0 */3 * * *'
