--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ networks:
     driver: bridge
 services:
   redis:
-    container_name: newsdict-redis
+    container_name: redis
     image: 'redis'
     networks:
       - app-tier
-  mongo:
-    container_name: newsdict-mongodb
+  mongodb:
+    container_name: mongodb
     image: mongo
     restart: always
     networks:
@@ -19,7 +19,7 @@ services:
   web:
     tty: true
     stdin_open: true
-    container_name: newsdict-web
+    container_name: web
     build:
       context: .
       dockerfile: Dockerfile
@@ -36,7 +36,7 @@ services:
   worker:
     tty: true
     stdin_open: true
-    container_name: newsdict-worker
+    container_name: worker
     image: newsdictio
     working_dir: /var/www/docker
     command: "bash src/provisioning/startup/worker/startup.sh development"
@@ -49,7 +49,7 @@ services:
   asciidoctor:
     tty: true
     stdin_open: true
-    container_name: newsdict-asciidoctor
+    container_name: asciidoctor
     image: newsdict/asciidoctor.live:v0.1.12
     command: "bash src/provisioning/startup/asciidoctor/startup.sh development"
     volumes:
@@ -61,7 +61,7 @@ services:
   guard:
     tty: true
     stdin_open: true
-    container_name: newsdict-guard
+    container_name: guard
     image: newsdict/asciidoctor.live:v0.1.12
     command: "bash src/provisioning/startup/guard/startup.sh development"
     volumes:
@@ -73,7 +73,7 @@ services:
   browser-sync:
     tty: true
     stdin_open: true
-    container_name: newsdict-browser-sync
+    container_name: browser-sync
     image: newsdict/asciidoctor.live:v0.1.12
     command: "bash src/provisioning/startup/browser-sync/startup.sh development"
     volumes:
