--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,12 +1,8 @@
 :schedule:
-  web_urls_job:
+  web_sites_job:
     enabled: false
     cron: '0 */3 * * *'
-    class: Crowling::WebUrlsJob
-  web_sections_job:
-    enabled: false
-    cron: '0 */3 * * *'
-    class: Crowling::WebSectionsJob
+    class: Crowling::WebSitesJob
   twitter_account_job:
     enabled: false
     cron: '0 */3 * * *'
