Added `Configs::Tokens`. / Bugfix / Refactoring `Theme`

--- a/.env-example
+++ b/.env-example
@@ -38,3 +38,9 @@ TWITTER_CONSUMER_KEY=dummy
 TWITTER_CONSUMER_SECRET=dummy
 TWITTER_ACCESS_TOKEN=dummy
 TWITTER_ACCESS_SECRET=dummy
+
+# Slack token
+SLACK_TOKEN=dummy
+
+# chatwork token
+CHATWORK_TOKEN=dummy
