--- a/.env-test
+++ b/.env-test
@@ -7,6 +7,9 @@ MAX_MEMBER_COUNT=2
 # super_admin email
 ADMIN_USER_EMAIL=dummy@dummy.com
 
+# super_admin default password
+ADMIN_DEFALT_PASSWORD=rr13Cf!pi
+
 # redis host and port
 REDIS_HOST=dummy.com
 SIDEKIQ_NAMESPACE=sidekiq
