Implemented the function to notify chatwork.

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,6 @@
+# Timezone
+TIMEZONE=Tokyo
+
 # Default Locale
 default_locale=ja
 
@@ -23,27 +26,3 @@ WEBPACK_DEV_SERVER_PUBLIC=1.2.3.4:3036
 # Logging to STDOUT
 # If you do not want to output the log, please comment out
 RAILS_LOG_TO_STDOUT=1
-
-# action mailer settings
-MAILER_SMTP=dummy.com
-MAILER_PORT=587
-MAILER_DOMAIN=dummy.com
-MAILER_USER_NAME=dummy
-MAILER_PASSWORD=dummy
-MAILER_AUTHENTICATION=login
-MAILER_ENABLE_STARTTLS_AUTO=true
-
-# mailer_sender used by `devise`
-MAILER_SENDER=dummy
-
-# twitter api keys
-TWITTER_CONSUMER_KEY=dummy
-TWITTER_CONSUMER_SECRET=dummy
-TWITTER_ACCESS_TOKEN=dummy
-TWITTER_ACCESS_SECRET=dummy
-
-# Slack token
-SLACK_TOKEN=dummy
-
-# chatwork token
-CHATWORK_TOKEN=dummy
