--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -7,6 +7,7 @@ development:
         - mongodb:27017
   options: &options
     raise_not_found_error: false
+    use_activesupport_time_zone: true
 test:
   clients:
     default:
