Implemented the function of notify to slack

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -19,3 +19,7 @@
     enabled: true
     cron: '0 * * * * *'
     class: Notify::ChatworksJob
+  notify_slacks_job:
+    enabled: true
+    cron: '0 * * * * *'
+    class: Notify::SlacksJob
