Fixed to not working workers.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -23,3 +23,8 @@
     enabled: true
     cron: '0 * * * * *'
     class: Notify::SlacksJob
+:queues:
+  - crawler
+  - notify
+  - mecab_dics
+  - sitemaps
